# MoofParser

./: CMakeLists.txt  CMakeLists.txt.in  README.md
inc/: boxes.hpp  fileBox.hpp  mediaDataBox.hpp  movieFragmentBox.hpp  movieFragmentHeaderBox.hpp  trackFragmentBox.hpp  trackFragmentHeaderBox.hpp  trackRunBox.hpp  unknownBox.hpp  utility.hpp
src/: boxes.cpp  main.cpp  mediaDataBox.cpp
